fixing tailwind-scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,22 +1,2 @@
 @import 'tailwindcss';
-
-.scrollbar-custom::-webkit-scrollbar {
-    width: 8px;
-}
-
-.scrollbar-custom::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-.scrollbar-custom::-webkit-scrollbar-button {
-    background: transparent;
-}
-
-.scrollbar-custom::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 9999px;
-}
-
-.scrollbar-custom::-webkit-scrollbar-thumb:hover {
-    background: rgba(255, 255, 255, 0.2);
-}
+@plugin 'tailwind-scrollbar';
